# 4x11Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build_game.bat  build_gamec.bat  build_luajit.bat  buildc.bat  imgui.ini
Examples/Controller-1.0/: project.4xp
Examples/Controller-1.0/scenes/: default.gaf
Examples/Controller-1.0/scripts/: pulse_effect.4xs  third_person.4xs
build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
imgui/: ImGuizmo.h
scripts/: color_cycle_light.4xs  example.4xs  orbit_camera.4xs  ping_pongEntity.4xs  pulse_effect.4xs  spinning_cube.4xs
src/: main.cpp
src/core/: ComPtr.h  CullingSystem.cpp  CullingSystem.h  FPSCamera.cpp  FPSCamera.h  ObjLoader.cpp  ObjLoader.h  Project.cpp  Project.h  SdkMeshLoader.cpp  SdkMeshLoader.h  Window.cpp  Window.h
src/d3d10/: Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  skybox.cpp  skybox.h
src/d3d11/: Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  skybox.cpp  skybox.h
src/ecs/: ECS.cpp  ECS.h
src/gizmo/: Gizmo.cpp  Gizmo.h
src/io/: Archive.cpp  Archive.h
src/phy/: 4xPhys.cpp  4xPhys.h  Physics.cpp  Physics.h
src/script/: ScriptEngine.cpp  ScriptEngine.h
src/ui/: CodeEditor.cpp  CodeEditor.h  Overlay.cpp  Overlay.h  ProjectManagerUI.cpp  ProjectManagerUI.h
tools/: PackAssets.cpp
